--- a/resources/styleshhets/widget.qss
+++ b/resources/styleshhets/widget.qss
@@ -54,7 +54,7 @@ QPushButton:pressed {
                border-style: inset;
            }
 
-DeselectableTableView{
+deselectableTableView{
 
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                       stop: 0 #E0E0E0, stop: 1 #FFFFFF);
